    source package ("source" grouping policy) within large collections
    (examples: all installed packages, all upgradable packages, all packages
    from "main" section), to add an intermediate grouping step.  In this way,
    one can for example emulate the hierarchy of FTPs (try grouping:
    "section(topdir),firstchar(source),source").

- Bug fixes:

  * Disable strings gathered for translation (Closes: #790568)

  * Change to try to make updated status stats more clear (Closes: #458351)

  * [cmdline] Correctly print when a package should be purged (Closes: #798286)

  * [curses] With the option of mini-buffer prompts enabled, cancellation of the
    "Quit confirmation" with 'Escape' or 'Ctrl-g' does not cause the
    dialog/prompt to stop working (Closes: #607118)

  * [cmdline] Warn when package cannot be marked/unmarked auto (Closes: #498240)

  * Install signal handlers and do clean-up when terminating abruptly
    (Closes: #558352)

  * [curses] Set better ordering for groups of Preview Actions (Closes: #434352)

- User visible changes:

  * Change error string of source_policy_parser to be the same as the rest

- Documentation:

  * Guide/User's Manual:

    * Remove grouping policy "hier" from doc/??/aptitude.xml (the
      categorial/hierarchical browser features were removed in version 0.7)

- Translation updates:

  * Russian by Lev Lamberov (Closes: #798485, #769428)


[2015-09-06]
Version 0.7.1

- Bug fixes:

  * Fix for wrong reported size of deleted files with 'autoclean' on 32-bit
    arches (Closes: #499872)

  * Be explicit when packages are already installed, cannot be removed/purged
    because they are not installed, and similar (Closes: #421469).

    It was changed to work in this way a few years ago in #258913 due to the
    installer, and required to pass verbose flag to print these messages, but
    this was caused at least 3 bug reports (merged) to be explicit, and aptitude