@@ -18,6 +18,14 @@ Version 0.7.2 UNRELEASED
     one can for example emulate the hierarchy of FTPs (try grouping:
     "section(topdir),firstchar(source),source").
 
+  * [curses] Add 'New Source Package View' to Views menu (thanks Thadeu Lima de
+    Souza Cascardo, see #497206), with some updates and minor modifications,
+    like more complex grouping.
+
+    The menu entry was removed before applying the patch attached to that bug
+    report, see comment to the commit: 66adb6c872f7b49279da43601e7d3ff199996c1a
+
+
 - Bug fixes:
 
   * Disable strings gathered for translation (Closes: #790568)
